# sst-effects

./: CMakeLists.txt  README.md
.github/workflows/: build-examples.yml  build-tests.yml  code-checks.yml
examples/: CLIExample.cpp  effect-example.cpp  example.cpp  voice-effect-example.cpp
include/sst/effects/: Bonsai.h  Chorus.h  ConcreteConfig.h  Delay.h  EffectCore.h  EffectCoreDetails.h  EffectsPresetSupport.h  Flanger.h  FloatyDelay.h  Nimbus.h  NimbusImpl.h  Phaser.h  Reverb1.h  Reverb2.h  RotarySpeaker.h  TreeMonster.h
include/sst/effects-shared/: TreemonsterCore.h  WidthProvider.h
include/sst/voice-effects/: VoiceEffectCore.h  VoiceEffectsPresetSupport.h
include/sst/voice-effects/delay/: Chorus.h  DelaySupport.h  FauxStereo.h  Microgate.h  ShortDelay.h  StringExciter.h  StringResonator.h  Widener.h
include/sst/voice-effects/distortion/: BitCrusher.h  Microgate.h  RingModulator.h  Slewer.h  TreeMonster.h
include/sst/voice-effects/dynamics/: AutoWah.h  Compressor.h
include/sst/voice-effects/eq/: Eq2BandParametric.h  EqGraphic6Band.h  EqNBandParametric.h  MorphEQ.h  TiltEQ.h
include/sst/voice-effects/filter/: CytomicSVF.h  FiltersPlusPlus.h  SSTFilters.h  Slewer.h  StaticPhaser.h  SurgeBiquads.h  UtilityFilters.h
include/sst/voice-effects/generator/: 3opPhaseMod.h  EllipticBlepWaveforms.h  FourVoiceResonator.h  GenCorrelatedNoise.h  GenPhaseMod.h  GenPulseSync.h  GenSaw.h  GenSin.h  GenVA.h  SinePlus.h  StringResonator.h  SuperSaw.h  TiltNoise.h
include/sst/voice-effects/lifted_bus_effects/: FXConfigFromVFXConfig.h  LiftedDelay.h  LiftedFlanger.h  LiftedReverb1.h  LiftedReverb2.h
include/sst/voice-effects/modulation/: Chorus.h  FMFilter.h  Flanger.h  FreqShiftMod.h  NoiseAM.h  PhaseMod.h  Phaser.h  RingMod.h  ShepardPhaser.h  StaticPhaser.h  Tremolo.h
include/sst/voice-effects/pitch/: PitchRing.h
include/sst/voice-effects/utilities/: GainMatrix.h  StereoFieldManipulator.h  StereoTool.h  VolumeAndPan.h
include/sst/voice-effects/waveshaper/: WaveShaper.h
presets/voice-effects/: README.md
presets/voice-effects/3op-pm/: Hit Me with an EG.vcfx
presets/voice-effects/osc-ebwf/: SuperSaw.vcfx  SuperTri.vcfx  SyncSine.vcfx
scripts/: fix_file_comments.pl  fix_header_guards.pl
src/: preset-api.cpp  preset-api.h
tests/: concrete-runs.cpp  create-effect.cpp  create-voice-effect.cpp  sfinae-test.cpp  simd-test-include.h  sst-effects-test.cpp
